--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* ===== RESET GLOBAL ===== */
 * {
   margin: 0;
@@ -78,4 +82,10 @@ img {
 
   background-size: 400px 400px;
   opacity: 0.08;
+}
+
+.root-wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
 }
